Trabalho Semestral para Fatec PG, prof Villani

--- a/TrabalhoSemestral/TP3/Exe1.html
+++ b/TrabalhoSemestral/TP3/Exe1.html
@@ -26,6 +26,11 @@
 
 </html>
 <script>
+/*
+1-) Faça um algoritmo que carregue um vetor com oito números inteiros, 
+calcule e exiba dois vetores resultantes. O primeiro vetor resultante deve contar os números positivos e o segundo, 
+os números negativos. Cada vetor resultante vai ter no máximo oito posições, sendo que nem todas devem ser obrigatoriamente utilizadas.
+*/
     var pegadados = [];
     var positivos = [];
     var negativos = [];
