--- a/TrabalhoSemestral/TP3/Exe2.html
+++ b/TrabalhoSemestral/TP3/Exe2.html
@@ -27,6 +27,10 @@
 
 </html>
 <script>
+/*
+2-) Faça um algoritmo que carregue um vetor com 8 números inteiros. 
+Calcule e exiba os números superiores a 50 e suas respectivas posições. Exiba a mensagem se não existir nenhum número nessa condição.
+*/
 var vetor = [];
 var contador = 0;
 var cont = 0;
