--- a/TrabalhoSemestral/TP3/Exe3.html
+++ b/TrabalhoSemestral/TP3/Exe3.html
@@ -25,6 +25,11 @@
 </body>
 </html>
 <script>
+/*
+3-) Faça um algoritmo que crie um vetor com 10 posições e cadastre dados dentro dos mesmos e 
+gere uma verificação: todos os números pares devem ser acrescidos 
+“+ 5” no seu valor e todos os números impares de vem ser multiplicados por 5, ao final exibir o vetor todo alterado.
+*/
 var vetor = [];
 vetor2 = [];
 var contador = 0;
