--- a/TrabalhoSemestral/TP3/Exe4.html
+++ b/TrabalhoSemestral/TP3/Exe4.html
@@ -23,6 +23,9 @@
 </body>
 </html>
 <script>
+/*
+4-) Faça um algoritmo que entre com 20 números no vetor e exiba-o ordenadamente (crescente).
+*/
 var contador = 0;
 var inteiros = [];
 function ordenaVetor(){
