--- a/TrabalhoSemestral/TP3/Exe4.html
+++ b/TrabalhoSemestral/TP3/Exe4.html
@@ -41,7 +41,7 @@ if(contador < 20)
     {
         for(var i = 0; i < j; i++)
         {
-            if(inteiros[i] < inteiros[i + 1]){
+            if(inteiros[i] > inteiros[i + 1]){
                 var troca = inteiros[i]
                 inteiros[i] = inteiros[i + 1]
                 inteiros[i + 1] = troca;
