--- a/TrabalhoSemestral/TP1/Exe5.html
+++ b/TrabalhoSemestral/TP1/Exe5.html
@@ -24,9 +24,7 @@
     <p id="resposta1"></p>
     <p id="resposta2"></p>
     </div>
-    <a class="redirecionar" ="center" href="../index.html"> Click aqui para voltar para o Menu.</a>
-</body>
-</html>
+    <a class="redirecionar" href="../index.html"> Click aqui para voltar para o Menu.</a>
 <script>
 function calcular(){
     var escolha = Number(document.all['escolha'].value);
@@ -63,3 +61,5 @@ function calcular2(){
 }
 
 </script>
+</body>
+</html>
